# raylib_share_libs

./: CMakeLists.txt  README.md  runapp.bat
apps/: CMakeLists.txt  main.c
docs/: notes.md
include/: core.h
libs/: CMakeLists.txt  README.md
libs/gamecode/: CMakeLists.txt
libs/gamecode/src/: core.c
src/: core.c
